// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridContainer Create GridContainer with {"alignContent": "center", "alignItems": "center", "justifyContent": "center", "justifyItems": "center"} 1`] = `
.emotion-0 {
  display: grid;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0>* {
  width: 100%;
  height: 100%;
}

<body>
  <div>
    <div
      class="emotion-0"
    />
  </div>
</body>
`;

exports[`GridContainer Create GridContainer with {"columnGap": "10px", "rowGap": "10px"} 1`] = `
.emotion-0 {
  display: grid;
  -webkit-column-gap: 10px;
  column-gap: 10px;
  row-gap: 10px;
}

.emotion-0>* {
  width: 100%;
  height: 100%;
}

<body>
  <div>
    <div
      class="emotion-0"
    />
  </div>
</body>
`;
